fix footnotes list overlap [skip ci]

--- a/assets/css/layout/_default/single.css
+++ b/assets/css/layout/_default/single.css
@@ -192,6 +192,12 @@ math[display=block]::after {
     width: 16.18rem;
 }
 
+.footnotes li::before {
+    display: initial;
+    left: -1.618pc;
+    background: unset;
+}
+
 #has-stage + article,
 #has-stage + article header {
     margin-top: 1em;
